# ML_AC_OPF

./: .coverage  .gitignore  DEPLOYMENT.md  PROJECT_STRUCTURE.md  README.md  RUNNING_MODELS.md  case30_optimization_solution.md  compare_case30_gnn.py  coverage.xml  custom_case_loader.py  fix_case30_infeasibility.py  gurobi_fix.py  mldl_environment.yml  prepare_case39.py  pyproject.toml  requirements.txt  run.py  run_case39.py  run_ml_opf.py  setup.py  simple_test.py  standalone_evaluation_test.py  test_gurobi_colab.py
analysis/: explore_data.py
configs/: case118_warm_starting.yaml  case30_local.yaml  case39_local.yaml  case5_gnn.yaml
data/: case39_simplified.m  create_small_dataset.py  download_case39_data.py  integrate_realistic_case39.py  prepare_case30.py  prepare_warmstart_data.py  preprocess_ieee39.py
docs/: BALANCED_MODEL_COMPARISON.md  DOMAIN_METRICS_EVALUATION.md  FAST_TRAINING_README.md  GNN_IMPLEMENTATION.md  METHODOLOGY.md  ML_AC_OPF_MATHEMATICAL_FORMULATIONS.md  MODEL_DEVELOPMENT_JOURNEY.md  README.md  RESULTS.md  TROUBLESHOOTING.md  VISUALIZATION.md
evaluation/: evaluate_domain_metrics.py  evaluate_ffn_complete.py  evaluate_ffn_metrics.py  run_complete_ffn_evaluation.sh  run_evaluation.sh  run_evaluation_patched.py  run_ffn_evaluation.sh
models/: __init__.py  advanced_networks.py  case39_gnn_model.pt  case39_norm_params.pt  feedforward.py  gnn.py
notebooks/: simple_ml_opf_colab.ipynb
scripts/: case5_gnn_fixed.py  case5_gnn_full.py  cleanup_organized.sh  cleanup_output.sh  constraint_screening.py  constraint_screening_fixed.py  create_symlink.sh  (+14 more)
(+130 files in other folders)
