[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-opf"
version = "0.1.0"
description = "Machine Learning for Optimal Power Flow"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "ML-OPF Team", email = "your.email@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "pypower>=5.1.0",
    "networkx>=2.6.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
]
visualization = [
    "plotly>=5.10.0",
]
gnn = [
    "torch-geometric>=2.0.0"
]

[project.urls]
"Homepage" = "https://github.com/yourusername/ML-OPF-Project"
"Bug Tracker" = "https://github.com/yourusername/ML-OPF-Project/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=./ --cov-report=xml --cov-report=term"

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "setup.py",
    ".github/*",
]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100 